--- a/ImageFeed/Presentation/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="o5f-ba-lih">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,6 +9,109 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ver-Po-Lhd">
+            <objects>
+                <tabBarController id="o5f-ba-lih" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8LV-ov-BR6">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="YP White"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </tabBarAppearance>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="WZa-vR-qwR"/>
+                        <segue destination="PON-4z-xRn" kind="relationship" relationship="viewControllers" id="gHB-nO-ske"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tjd-0x-fPg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1453" y="-77"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Wov-Qn-96R">
+            <objects>
+                <viewController id="PON-4z-xRn" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mXj-6q-Gr3">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3nX-AL-Apm">
+                                <rect key="frame" x="16" y="91" width="361" height="153"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9cx-NV-YVr">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="70"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Userpick Stub" translatesAutoresizingMaskIntoConstraints="NO" id="Q6g-fx-wbr" userLabel="Userpick">
+                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="70" id="kxN-la-IIz"/>
+                                                    <constraint firstAttribute="height" constant="70" id="yv2-bb-zxc"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rxO-uQ-Xmh">
+                                                <rect key="frame" x="317" y="13" width="44" height="44"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="44" id="5p3-Cm-MP5"/>
+                                                    <constraint firstAttribute="width" constant="44" id="ThB-Z9-92I"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="Exit" title=""/>
+                                                <connections>
+                                                    <action selector="touchExit:" destination="PON-4z-xRn" eventType="touchUpInside" id="Hvk-XJ-0dV"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsr-xK-PtK" userLabel="Name">
+                                        <rect key="frame" x="0.0" y="78" width="58.666666666666664" height="27.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                        <color key="textColor" name="YP White"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tna-v0-6Cx" userLabel="Email">
+                                        <rect key="frame" x="0.0" y="113.66666666666666" width="33" height="15.666666666666657"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" name="YP Gray"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1x-tH-ypf" userLabel="User Info">
+                                        <rect key="frame" x="0.0" y="137.33333333333334" width="33" height="15.666666666666657"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" name="YP White"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="9cx-NV-YVr" firstAttribute="leading" secondItem="3nX-AL-Apm" secondAttribute="leading" id="KqE-gQ-Y13"/>
+                                    <constraint firstAttribute="trailing" secondItem="9cx-NV-YVr" secondAttribute="trailing" id="tVs-I7-EU7"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="F5C-lR-ACa"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="F5C-lR-ACa" firstAttribute="top" secondItem="3nX-AL-Apm" secondAttribute="top" constant="-32" id="L5Y-5Y-fN7"/>
+                            <constraint firstItem="F5C-lR-ACa" firstAttribute="trailing" secondItem="3nX-AL-Apm" secondAttribute="trailing" constant="16" id="LGw-So-Pyb"/>
+                            <constraint firstItem="3nX-AL-Apm" firstAttribute="leading" secondItem="F5C-lR-ACa" secondAttribute="leading" constant="16" id="fUH-aL-vPH"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="Profile Tab" id="WP9-NR-aZU"/>
+                    <connections>
+                        <outlet property="email" destination="Tna-v0-6Cx" id="vOp-mn-ctp"/>
+                        <outlet property="exit" destination="rxO-uQ-Xmh" id="i2s-p0-uuX"/>
+                        <outlet property="name" destination="Lsr-xK-PtK" id="YD9-tX-iO2"/>
+                        <outlet property="userInfo" destination="i1x-tH-ypf" id="aJg-FN-zft"/>
+                        <outlet property="userpick" destination="Q6g-fx-wbr" id="7mI-Ah-3iO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NtJ-6W-yl3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-414.50381679389312" y="307.04225352112678"/>
+        </scene>
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -54,7 +157,7 @@
                                                     <state key="normal" image="RedHeart">
                                                         <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
-                                                    <buttonConfiguration key="configuration" style="plain" image="RedHeart">
+                                                    <buttonConfiguration key="configuration" style="plain" image="RedHeart" title="">
                                                         <color key="baseForegroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </buttonConfiguration>
                                                 </button>
@@ -106,20 +209,28 @@
                             <constraint firstAttribute="bottom" secondItem="uIc-rc-lPz" secondAttribute="bottom" id="jfE-P1-AXl"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="Main Tab" id="2Zs-v1-iVp"/>
                     <connections>
                         <outlet property="tableView" destination="uIc-rc-lPz" id="qgm-ro-rZU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="121.37404580152672" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="-424" y="-464"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="Exit" width="44" height="44"/>
+        <image name="Main Tab" width="30" height="30"/>
+        <image name="Profile Tab" width="30" height="30"/>
         <image name="RedHeart" width="44" height="44"/>
+        <image name="Userpick Stub" width="70" height="70"/>
         <namedColor name="YP Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP Gray">
+            <color red="0.68199998140335083" green="0.68599998950958252" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="YP White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
