--- a/ImageFeed/Presentation/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Base.lproj/Main.storyboard
@@ -58,8 +58,8 @@
                                                     <constraint firstAttribute="height" constant="44" id="5p3-Cm-MP5"/>
                                                     <constraint firstAttribute="width" constant="44" id="ThB-Z9-92I"/>
                                                 </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="Exit" title=""/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="" image="Exit"/>
                                                 <connections>
                                                     <action selector="touchExit:" destination="PON-4z-xRn" eventType="touchUpInside" id="Hvk-XJ-0dV"/>
                                                 </connections>
@@ -154,12 +154,9 @@
                                                         <constraint firstAttribute="width" constant="44" id="iG9-Zz-JyB"/>
                                                     </constraints>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="RedHeart">
+                                                    <state key="normal" title="" image="RedHeart">
                                                         <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
-                                                    <buttonConfiguration key="configuration" style="plain" image="RedHeart" title="">
-                                                        <color key="baseForegroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </buttonConfiguration>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eg-RP-smg" userLabel="Date Label">
                                                     <rect key="frame" x="8" y="112.66666666666667" width="101.66666666666667" height="15.666666666666671"/>
@@ -231,10 +228,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sQe-t7-FO8" userLabel="Back">
-                                <rect key="frame" x="8" y="9" width="48" height="38"/>
+                                <rect key="frame" x="8" y="9" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="Ucr-Sh-u8R"/>
+                                    <constraint firstAttribute="height" constant="44" id="zMs-8m-Adx"/>
+                                </constraints>
                                 <color key="tintColor" name="YP White"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="Back" title=""/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="" image="Back"/>
                                 <connections>
                                     <action selector="tapBack" destination="xgf-xr-mAD" eventType="touchUpInside" id="LIo-7d-aj5"/>
                                 </connections>
@@ -259,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G71-E8-PK5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1386" y="-454"/>
+            <point key="canvasLocation" x="1402" y="-464"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eBQ-xq-TsS">
