--- a/ImageFeed/Presentation/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Base.lproj/Main.storyboard
@@ -153,6 +153,7 @@
                                                         <constraint firstAttribute="height" constant="44" id="cFE-bU-Akz"/>
                                                         <constraint firstAttribute="width" constant="44" id="iG9-Zz-JyB"/>
                                                     </constraints>
+                                                    <color key="tintColor" name="YP Red"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" title="" image="RedHeart">
                                                         <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -224,11 +225,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3" translatesAutoresizingMaskIntoConstraints="NO" id="2UE-I7-dzy">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                            </imageView>
+                            <scrollView verifyAmbiguity="off" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EHu-rv-FNt">
+                                <rect key="frame" x="-20" y="-20" width="433" height="892"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3" translatesAutoresizingMaskIntoConstraints="NO" id="2UE-I7-dzy">
+                                        <rect key="frame" x="20" y="20" width="393" height="852"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="M6p-U3-MKZ"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Klc-Gv-V23"/>
+                                <connections>
+                                    <outlet property="delegate" destination="xgf-xr-mAD" id="hOC-1U-bWj"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sQe-t7-FO8" userLabel="Back">
-                                <rect key="frame" x="8" y="9" width="44" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="Ucr-Sh-u8R"/>
                                     <constraint firstAttribute="height" constant="44" id="zMs-8m-Adx"/>
@@ -244,18 +256,19 @@
                         <viewLayoutGuide key="safeArea" id="sQM-Xi-Y7Y"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="2UE-I7-dzy" firstAttribute="leading" secondItem="lID-db-tlg" secondAttribute="leading" id="3ux-NS-bWb"/>
-                            <constraint firstAttribute="bottom" secondItem="2UE-I7-dzy" secondAttribute="bottom" id="48E-gj-mzl"/>
-                            <constraint firstItem="sQe-t7-FO8" firstAttribute="leading" secondItem="sQM-Xi-Y7Y" secondAttribute="leading" constant="8" id="4fY-Hh-HUy"/>
+                            <constraint firstItem="sQe-t7-FO8" firstAttribute="leading" secondItem="sQM-Xi-Y7Y" secondAttribute="leading" id="4fY-Hh-HUy"/>
                             <constraint firstItem="sQM-Xi-Y7Y" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sQe-t7-FO8" secondAttribute="trailing" symbolic="YES" id="61B-Wq-Ufe"/>
-                            <constraint firstItem="2UE-I7-dzy" firstAttribute="top" secondItem="lID-db-tlg" secondAttribute="top" id="kzt-lQ-rZo"/>
-                            <constraint firstAttribute="trailing" secondItem="2UE-I7-dzy" secondAttribute="trailing" id="rwV-UG-BGE"/>
-                            <constraint firstItem="sQe-t7-FO8" firstAttribute="top" secondItem="sQM-Xi-Y7Y" secondAttribute="top" constant="9" id="yKn-bq-ZIA"/>
+                            <constraint firstAttribute="top" secondItem="EHu-rv-FNt" secondAttribute="top" id="8ql-ff-co8"/>
+                            <constraint firstAttribute="leading" secondItem="EHu-rv-FNt" secondAttribute="leading" id="eGG-Dz-y68"/>
+                            <constraint firstItem="EHu-rv-FNt" firstAttribute="bottom" secondItem="lID-db-tlg" secondAttribute="bottom" id="lOM-vl-gNG"/>
+                            <constraint firstItem="EHu-rv-FNt" firstAttribute="trailing" secondItem="lID-db-tlg" secondAttribute="trailing" id="u8o-xU-QQK"/>
+                            <constraint firstItem="sQe-t7-FO8" firstAttribute="top" secondItem="sQM-Xi-Y7Y" secondAttribute="top" id="yKn-bq-ZIA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PkU-X1-PSp"/>
                     <connections>
                         <outlet property="imageView" destination="2UE-I7-dzy" id="yMM-mF-Xt3"/>
+                        <outlet property="scrollView" destination="EHu-rv-FNt" id="UOq-61-CG4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G71-E8-PK5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -300,6 +313,9 @@
         </namedColor>
         <namedColor name="YP Gray">
             <color red="0.68199998140335083" green="0.68599998950958252" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP Red">
+            <color red="0.96100002527236938" green="0.41999998688697815" blue="0.42399999499320984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="YP White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
